@@ -3125,8 +3125,11 @@ GEN     FFXQ_inv(GEN Pf, GEN Qf, GEN ff);
 GEN     FqX_to_FFX(GEN x, GEN ff);
 GEN     Fq_to_FF(GEN x, GEN ff);
 GEN     Z_FF_div(GEN a, GEN b);
+GEN     ffembed(GEN a, GEN b);
 GEN     ffgen(GEN T, long v);
+GEN     ffinvmap(GEN m);
 GEN     fflog(GEN x, GEN g, GEN o);
+GEN     ffmap(GEN m, GEN x);
 GEN     fforder(GEN x, GEN o);
 GEN     ffprimroot(GEN x, GEN *o);
 GEN     ffrandom(GEN ff);
