@@ -252,9 +252,13 @@ t^4 + t^2
 1
 ? my(a=ffgen([2,100]));(0*a*x)*x
 0
+? test(p=3,n=10,d=2)=q=p^n;a=ffgen([p,n],'a);b=ffgen([p,d*n],'b);m=ffembed(a,b);r=ffinvmap(m);if(minpoly(ffmap(m,a),'a)!=a.mod,error("minpoly"));Pa=a^2+a+3;Pb=ffmap(m,Pa);Pc=ffmap(r,Pb);if(Pc!=Pa,error("ffmap"));if(ffmap(r,b)!=[],error("ffmap"));Qa=[Pa,x^2+x*Pa+1];Qb=ffmap(m,Qa);Qc=ffmap(r,Qb);if(Qc!=Qa,error("ffmap"));
+? test(2,10,3)
+? test(3,10,2)
+? test(nextprime(2^100),3,3)
 ? ffgen(x^2+x+Mod(1,3))
   ***   at top-level: ffgen(x^2+x+Mod(1,3))
   ***                 ^---------------------
   *** ffgen: not an irreducible polynomial in ffgen: x^2 + x + 1.
 ? print("Total time spent: ",gettime);
-Total time spent: 940
+Total time spent: 928
