@@ -102,4 +102,26 @@ test(nextprime(2^63)^5)
 
 my(a=ffgen([2,100]));(0*a*x)*x
 
+test(p=3,n=10,d=2)=
+{
+  q = p^n;
+  a = ffgen([p,n],'a);
+  b = ffgen([p,d*n],'b);
+  m = ffembed(a,b); r = ffinvmap(m);
+  if (minpoly(ffmap(m,a),'a) != a.mod,error("minpoly"));
+  Pa = a^2+a+3;
+  Pb = ffmap(m,Pa);
+  Pc = ffmap(r,Pb);
+  if (Pc!=Pa, error("ffmap"));
+  if (ffmap(r,b)!=[],error("ffmap"));
+  Qa = [Pa,x^2+x*Pa+1];
+  Qb = ffmap(m,Qa);
+  Qc = ffmap(r,Qb);
+  if (Qc!=Qa, error("ffmap"));
+}
+test(2,10,3)
+test(3,10,2)
+test(nextprime(2^100),3,3)
+
+/* error */
 ffgen(x^2+x+Mod(1,3))
